--- a/commit0.module.yml
+++ b/commit0.module.yml
@@ -4,9 +4,23 @@ author: ''
 icon: ''
 thumbnail: ''
 
+prompts: 
+  - field: region
+    label: Select AWS Region
+    options: 
+      - "us-west-1"
+      - "us-west-2"
+      - "us-east-1"
+      - "us-east-2"
+      - "ca-central-1"
+      - "eu-central-1"
+      - "eu-west-1"
+      - "ap-east-1"
+      - "ap-south-1"
+
 template:
   strictMode: true
   delimiters:
     - '<%'
     - '%>'
-  output: 'tmp/web-app'
+  output: 'infrastructure'
