--- a/commit0.module.yml
+++ b/commit0.module.yml
@@ -17,6 +17,8 @@ prompts:
       - "eu-west-1"
       - "ap-east-1"
       - "ap-south-1"
+  - field: accountId  
+    label: AWS Account ID
   - field: stagingHost  
     label: Staging Host Name
   - field: productionHost  
