--- a/templates/Makefile
+++ b/templates/Makefile
@@ -26,7 +26,7 @@ apply-k8s-utils: update-k8s-conf
 	terraform apply
 
 update-k8s-conf:
-	aws eks --region <% index .Params `region` %> update-kubeconfig --name <% .Name %>-$(ENV)-<% index .Params `region` %>
+	aws eks --region <% index .Params `region` %> update-kubeconfig --name <% .Name %>-$(ENVIRONMENT)-<% index .Params `region` %>
 
 teardown: teardown-k8s-utils teardown-env teardown-secrets teardown-remote-state
 
