--- a/zero-module.yml
+++ b/zero-module.yml
@@ -44,4 +44,10 @@ parameters:
   - field: eksWorkerAMI
     label: EKS Worker EC2 AMI ID
     execute: aws ssm get-parameters --names /aws/service/eks/optimized-ami/1.15/amazon-linux-2/recommended/image_id --region $region --query "Parameters[0].Value" | tr -d '"'
+  - field: eksWorkerAMI
+    label: EKS Worker EC2 AMI ID
+    execute: aws ssm get-parameters --names /aws/service/eks/optimized-ami/1.15/amazon-linux-2/recommended/image_id --region $region --query "Parameters[0].Value" | tr -d '"'
+  - field: randomSeed
+    label: Random seed that will be shared between projects to come up with deterministic resource names
+    execute: uuidgen
 
