--- a/zero-module.yml
+++ b/zero-module.yml
@@ -23,20 +23,44 @@ parameters:
       - "us-east-2"
   - field: productionHostRoot
     label: Production Root Host Name (e.g. mydomain.com) - this must be the root of the chosen domain, not a subdomain.
+    fieldValidation:
+      type: regex
+      value: '^([a-z0-9]+(-[a-z0-9]+)*\.{1})+[a-z]{2,}$'
+      errorMessage: Invalid root domain name
   - field: productionFrontendSubdomain
     label: Production Frontend Host Name (e.g. app.)
     default: app.
+    fieldValidation:
+      type: regex
+      value: '^([a-z0-9]+(-[a-z0-9]+)*\.)$'
+      errorMessage: Invalid subdomain (cannot contain special chars & must end with a '.')
   - field: productionBackendSubdomain
     label: Production Backend Host Name (e.g. api.)
     default: api.
+    fieldValidation:
+      type: regex
+      value: '^([a-z0-9]+(-[a-z0-9]+)*\.)$'
+      errorMessage: Invalid subdomain (cannot contain special chars & must end with a '.')
   - field: stagingHostRoot
     label: Staging Root Host Name (e.g. mydomain-staging.com) - this must be the root of the chosen domain, not a subdomain.
+    fieldValidation:
+      type: regex
+      value: '^([a-z0-9]+(-[a-z0-9]+)*\.{1})+[a-z]{2,}$'
+      errorMessage: Invalid root domain name
   - field: stagingFrontendSubdomain
     label: Staging Frontend Host Name (e.g. app.)
     default: app.
+    fieldValidation:
+      type: regex
+      value: '^([a-z0-9]+(-[a-z0-9]+)*\.)$'
+      errorMessage: Invalid subdomain (cannot contain special chars & must end with a '.')
   - field: stagingBackendSubdomain
     label: Staging Backend Host Name (e.g. api.)
     default: api.
+    fieldValidation:
+      type: regex
+      value: '^([a-z0-9]+(-[a-z0-9]+)*\.)$'
+      errorMessage: Invalid subdomain (cannot contain special chars & must end with a '.')
   - field: accountId
     label: AWS Account ID
     execute: aws sts get-caller-identity --query "Account" | tr -d '"'
