fix: exec locally instead of aws_eks_cluster_auth
token generated by the data.aws_eks_cluster_auth has a bug where it
generates a token for the wrong region, leading to other users cannot
`terraform plan` even though they have the correct permission

--- a/templates/Makefile
+++ b/templates/Makefile
@@ -28,7 +28,7 @@ apply-k8s-utils: update-k8s-conf
 	terraform apply $(AUTO_APPROVE)
 
 update-k8s-conf:
-	aws eks --region <% index .Params `region` %> update-kubeconfig --name $(PROJECT)-$(ENVIRONMENT)-<% index .Params `region` %>
+	aws eks --region <% index .Params `region` %> update-kubeconfig --role "arn:aws:iam::<% index .Params `accountId` %>:role/$(PROJECT)-kubernetes-admin-$(ENVIRONMENT)" --name $(PROJECT)-$(ENVIRONMENT)-<% index .Params `region` %>
 
 post-apply-setup:
 	cd scripts && ENVIRONMENT=$(ENVIRONMENT) PROJECT=$(PROJECT) sh post-apply.sh
