--- a/zero-module.yml
+++ b/zero-module.yml
@@ -71,6 +71,9 @@ parameters:
     options:
       - "cloudwatch"
       - "kibana"
+  - field: sendgridApiKey
+    label: "API key to setup email integration (optional: leave blank to opt-out of Sendgrid setup)"
+    info: Signup at https://signup.sendgrid.com or create an API key from https://app.sendgrid.com/settings/api_keys. Sendgrid is an email delivery service enabling transactional email sending and more.
   - field: accountId
     label: AWS Account ID
     execute: aws sts get-caller-identity --query "Account" | tr -d '"'
