--- a/zero-module.yml
+++ b/zero-module.yml
@@ -80,3 +80,9 @@ parameters:
   - field: randomSeed
     label: Random seed that will be shared between projects to come up with deterministic resource names
     execute: uuidgen | head -c 8
+  - field: fileUploads
+    label: Enable file uploads?
+    default: yes
+    options:
+      - "yes"
+      - "no"
