--- a/zero-module.yml
+++ b/zero-module.yml
@@ -81,7 +81,7 @@ parameters:
     label: Random seed that will be shared between projects to come up with deterministic resource names
     execute: uuidgen | head -c 8
   - field: fileUploads
-    label: Enable file uploads?
+    label: Enable file uploads using S3 and Cloudfront signed URLs? (Will require manual creation of a Cloudfront keypair in AWS)
     default: yes
     options:
       - "yes"
