zero-234 Image Hosting Support (#86)
* zero-234 Image Hosting Support

https://app.zenhub.com/workspace/o/commitdev/zero/issues/234

- Moves backend app namespace configuration to main.tf from database-service.tf.
- Adds fileuploads question to cli interview.
- Adds new terraform for the backend app to backend-service.tf.

* Kubernetes doesn't allow underscores in resource names

* Rename files to match convention

* Add script for importing CF keypair data to Secrets Manager

* Improves labelling of file uploads query.
Improves comments in CF keypair import script.

* zero-234: Fixup secretsmanager usage and secret naming

- Specify the aws_secretsmanager_secret data source that was missing previously
- Fix the aws_secretsmanager_secret_version data source to refer to the previous properly
- Use a local var to store the decoded json instead of assigning it to an unavailable value attribute
- Use 'private_key' instead of 'keypair_secret' for the private key secret key-name

* zero-234: PR feedback

- Fix naming of aws secretsmanager secret data source
- Fix resource referenced by aws secretsmanager secret version data source
- Correctly set the namespace for the kubernetes_secret resource
- Fix the naming of the k8s secret to match the aws secretsmanager secret name
- Use help text when too few parameters are supplies to CF keypair import script

* Add k8s secret name back in

* Update templated README with instructions on using import-cf-keypair.sh

--- a/zero-module.yml
+++ b/zero-module.yml
@@ -83,3 +83,9 @@ parameters:
   - field: randomSeed
     label: Random seed that will be shared between projects to come up with deterministic resource names
     execute: uuidgen | head -c 8
+  - field: fileUploads
+    label: Enable file uploads using S3 and Cloudfront signed URLs? (Will require manual creation of a Cloudfront keypair in AWS)
+    default: yes
+    options:
+      - "yes"
+      - "no"
