fixup! add linting and validation to terraform code

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   validate:
-    name: template terraform
+    name: Validate Terraform
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
