Initial commit of auth proxy and user management
Using Ory Kratos and Oathkeeper.
Added Zero module parameter to enable or disable.
Still need to add proper DB and mail support.
Not including oathkeeper rules for now, as since we are using the operator we can define them in the backend project.

--- a/zero-module.yml
+++ b/zero-module.yml
@@ -94,3 +94,9 @@ parameters:
     options:
       - "yes"
       - "no"
+  - field: userAuth
+    label: Enable user management using Kratos and authentication using the Oathkeeper access proxy?
+    default: yes
+    options:
+      - "yes"
+      - "no"
